--- a/source/catalog.html
+++ b/source/catalog.html
@@ -216,7 +216,7 @@
                   </div>
                   <div class="prace-line">
                     <p>Вкус</p>
-                    <p>Греча</p>
+                    <p>Гречка</p>
                   </div>
                   <div class="prace-line">
                     <p>Цена</p>
@@ -247,7 +247,7 @@
                   </div>
                   <div class="prace-line">
                     <p>Вкус</p>
-                    <p>Греча</p>
+                    <p>Гречка</p>
                   </div>
                   <div class="prace-line">
                     <p>Цена</p>
