--- a/source/index.html
+++ b/source/index.html
@@ -128,10 +128,15 @@
               <source media="(min-width: 768px)" srcset="../img/before-tablet@1x.png 1x, ../img/before-tablet@2x.png 2x">
               <img class="slider__img" src="../img/before-mobile@1x.png" srcset="../img/before-mobile@2x.png 2x" width="320" height="240" alt="Изоражение кота Бориса До">
             </picture>
-            <ul class="slider__list">
+            <div class="slider__button-wrapper">
+              <p class="slider__button">Было</p>
+              <div class="slider__button2"><div class="slider__button-radio"></div></div>
+              <p class="slider__button">Стало</p>
+            </div>
+            <!-- <ul class="slider__list">
               <li><label class="slider__button button-after"><input type="radio" name="slider-radio"  value="befor" class="visually-hidden" checked><span class="slider-radio"></span>Было</label></li>
               <li><label class="slider__button button-befor"><input type="radio" name="slider-radio" value="after" class="visually-hidden"><span class="slider-radio"></span>Стало</label></li>
-            </ul>
+            </ul> -->
           </div>
           <div class="slider__after">
             <picture>
