--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,10 +60,10 @@
           </a>
           <button type="button" class="nav__button button-header">Меню</button>
         </div>
-        <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
-          <li class="list-menu__item"><a class="list-menu__link list-menu__link--activ"  href="#">Каталог продукции</a></li>
-         <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
+        <ul class="page-header__list nav-menu">
+          <li class="nav-menu__item"><a class="nav-menu__link" href="index.html">Главная</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link nav-menu__link--activ"  href="#">Каталог продукции</a></li>
+         <li class="nav-menu__item"><a class="nav-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
       </div>
     </header>
@@ -72,224 +72,224 @@
         <div class="catalog-wrapper">
           <h1>Каталог продукции</h1>
           <ul class="catalog-list">
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/chicken-small-desktop@1x.png 1x, ../img/chicken-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/chicken-small-tablet@1x.png 1x, ../img/chicken-small-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/chicken-small-mobile@1x.jpg" srcset="../img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 500 грамм 700 рублей">
+                    <img class="catalog-list__item-img" src="../img/chicken-small-mobile@1x.jpg" srcset="../img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 500 грамм 700 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Pro 500 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Pro 500 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>500 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Курица</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>700 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/chicken-big-desktop@1x.png 1x, ../img/chicken-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/chicken-big-tablet@1x.png 1x, ../img/chicken-big-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/chicken-big-mobile@1x.jpg" srcset="../img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 1000 грамм 1000 рублей">
+                    <img class="catalog-list__item-img" src="../img/chicken-big-mobile@1x.jpg" srcset="../img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 1000 грамм 1000 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Pro 1000 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Pro 1000 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>1000 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Курица</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>1000 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/fish-small-desktop@1x.png 1x, ../img/fish-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/fish-small-tablet@1x.png 1x, ../img/fish-small-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/fish-small-mobile@1x.jpg" srcset="../img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 500 грамм 700 рублей">
+                    <img class="catalog-list__item-img" src="../img/fish-small-mobile@1x.jpg" srcset="../img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 500 грамм 700 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Pro 500 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Pro 500 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>500 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Рыба</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>700 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/fish-big-desktop@1x.png 1x, ../img/fish-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/fish-big-tablet@1x.png 1x, ../img/fish-big-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/fish-big-mobile@1x.jpg" srcset="../img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 1000 грамм 1000 рублей">
+                    <img class="catalog-list__item-img" src="../img/fish-big-mobile@1x.jpg" srcset="../img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 1000 грамм 1000 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Pro 1000 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Pro 1000 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>1000 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Рыба</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>1000 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/buckwheat-small-desktop@1x.png 1x, ../img/buckwheat-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/buckwheat-small-tablet@1x.png 1x, ../img/buckwheat-small-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/buckwheat-small-mobile@1x.jpg" srcset="../img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 500 грамм 400 рублей">
+                    <img class="catalog-list__item-img" src="../img/buckwheat-small-mobile@1x.jpg" srcset="../img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 500 грамм 400 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Slim 500 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Slim 500 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>500 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Гречка</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>400 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/buckwheat-big-desktop@1x.png 1x, ../img/buckwheat-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/buckwheat-big-tablet@1x.png 1x, ../img/buckwheat-big-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/buckwheat-big-mobile@1x.jpg" srcset="../img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 1000 грамм 700 рублей">
+                    <img class="catalog-list__item-img" src="../img/buckwheat-big-mobile@1x.jpg" srcset="../img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 1000 грамм 700 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Slim 1000 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Slim 1000 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>1000 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Гречка</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>700 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
-              <div class="item-catalog__info">
+            <li class="catalog-list__item">
+              <div class="catalog-list__item-info">
                 <a>
                   <picture>
                     <source media="(min-width: 1440px)" srcset="../img/rice-small-desktop@1x.png 1x, ../img/rice-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="../img/rice-small-tablet@1x.png 1x, ../img/rice-small-tablet@2x.png 2x">
-                    <img class="item-catalog__img" src="../img/rice-small-mobile@1x.jpg" srcset="../img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом риса 500 грамм 400 рублей">
+                    <img class="catalog-list__item-img" src="../img/rice-small-mobile@1x.jpg" srcset="../img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом риса 500 грамм 400 рублей">
                   </picture>
                 </a>
-                <div class="item-catalog__text">
-                <a class="item-catalog__link" href="#">
-                  <h3 class="item-catalog__heading">Cat Energy Slim 500 г</h3>
+                <div class="catalog-list__item-text">
+                <a class="catalog-list__item-link" href="#">
+                  <h3 class="catalog-list__item-heading">Cat Energy Slim 500 г</h3>
                 </a>
-                <div class="item-catalog__prace prace">
-                  <div class="prace-line">
+                <div class="catalog-list__item-prace prace">
+                  <div class="catalog-list__prace-line">
                     <p>Объем</p>
                     <p>500 г</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Вкус</p>
                     <p>Рис</p>
                   </div>
-                  <div class="prace-line">
+                  <div class="catalog-list__prace-line">
                     <p>Цена</p>
                     <p>400 Р.</p>
                   </div>
                 </div>
                 </div>
               </div>
-              <a class="item-catalog__link-button">Заказать</a>
+              <a class="catalog-list__item-button">Заказать</a>
             </li>
-            <li class="catalog-list__item item-catalog">
+            <li class="catalog-list__item">
               <div class="catalog-product">
                 <svg class="catalog-product__plus" width="60" height="60"><use xlink:href="#icon-plus"></use></svg>
                 <h3 class="catalog-product__heading">Показать еще 100500 товаров</h3>
@@ -372,7 +372,7 @@
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
            <div class="map__text"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></div>
         </div>
-        <iframe class="interactiv-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
+        <iframe class="map__interactiv" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
                 width="320" height="362" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
@@ -396,7 +396,7 @@
         </li>
         <li><div class="page-footer__copyright copyright">
           <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <p class="copyright_text">HTML Academy</p>
+          <p class="copyright__text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path fill="#inherit" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
             36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7
