--- a/source/form.html
+++ b/source/form.html
@@ -49,10 +49,10 @@
           </a>
           <button type="button" class="nav__button button-header">Меню</button>
         </div>
-        <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
-          <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
-         <li class="list-menu__item"><a class="list-menu__link list-menu__link--activ" href="#">Подбор программы</a></li>
+        <ul class="page-header__list nav-menu">
+          <li class="nav-menu__item"><a class="nav-menu__link" href="index.html">Главная</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="catalog.html">Каталог продукции</a></li>
+         <li class="nav-menu__item"><a class="nav-menu__link nav-menu__link--activ" href="#">Подбор программы</a></li>
         </ul>
       </div>
     </header>
@@ -77,20 +77,20 @@
             </fieldset>
             </div>
             <fieldset class="form__owner owner">
-              <legend class="form__legend legend__data">Контактные данные (владельца кота)</legend>
+              <legend class="form__legend owner__legend">Контактные данные (владельца кота)</legend>
               <div class="owner__label">
               <label class="label-mail">E-mail:*<input type="email" name="emailuser" placeholder="kuklachev@gmail.com" required></label>
-              <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" max="11" pattern="[8]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
+              <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" pattern="[8]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
               </div>
             </fieldset>
             <fieldset class="form__comment comment">
-              <legend class="form__legend legend__comment">Комментарий</legend>
+              <legend class="form__legend comment__legend">Комментарий</legend>
               <label>
                 <textarea name="comment" placeholder="Расскажите обо всех повадках кота" rows="8"></textarea>
               </label>
             </fieldset>
             <fieldset class="form__additional additional">
-              <legend class="form__legend legend__add">Дополнительно</legend>
+              <legend class="form__legend additional__legend">Дополнительно</legend>
               <ul class="additional__list-check">
                   <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label></li>
                   <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label></li>
@@ -111,7 +111,7 @@
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
            <div class="map__text"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></div>
         </div>
-        <iframe class="interactiv-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
+        <iframe class="map__interactiv" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
                 width="320" height="362" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
@@ -135,7 +135,7 @@
         </li>
         <li><div class="page-footer__copyright copyright">
           <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <p class="copyright_text">HTML Academy</p>
+          <p class="copyright__text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path fill="#inherit" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
             36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7
@@ -149,6 +149,5 @@
         </ul>
       </div>
     </footer>
-    <script src="../js/menu.js"></script>
   </body>
 </html>
