--- a/source/index.html
+++ b/source/index.html
@@ -50,10 +50,10 @@
           </a>
           <button type="button" class="nav__button button-header">Меню</button>
         </div>
-        <ul class="page-header__list list-menu list-menu--white">
-          <li class="list-menu__item"><a class="list-menu__link list-menu__link--activ" href="#">Главная</a></li>
-          <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
-         <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
+        <ul class="page-header__list nav-menu nav-menu--white">
+          <li class="nav-menu__item"><a class="nav-menu__link nav-menu__link--activ" href="#">Главная</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="catalog.html">Каталог продукции</a></li>
+         <li class="nav-menu__item"><a class="nav-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
       </div>
     </header>
@@ -61,7 +61,7 @@
       <section class="cover">
         <div class="cover-bg-mobile"></div>
         <div class="cover__wrapper cover-text">
-          <div class="cover_bg-dekstop"></div>
+          <div class="cover__bg-dekstop"></div>
           <div class="cover-text__wrapper">
            <h1 class="cover__h1">Функциональное питание для котов</h1>
            <p class="cover__text">Занялся собой? Займись котом!</p>
@@ -86,7 +86,7 @@
           <div class="program__weight weight weight--pro">
             <div class="weight__wrapper">
             <h3 class="weight__pro">Набор массы</h3>
-            <p class="weight__description description-pro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <p class="weight__description weight__description--pro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="weight__link" href="#">Каталог PRO</a>
             </div>
           </div>
@@ -95,10 +95,10 @@
         <div class="advantages__wrapper">
           <h2>Как это работает</h2>
           <ul class="advantages__list list-page">
-            <li class="list-page__item item-leaf"><div class="item-namber">1</div>Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="list-page__item item-powder"><div class="item-namber">2</div>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="list-page__item item-dining"><div class="item-namber">3</div>Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="list-page__item item-clock"><div class="item-namber">4</div>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="list-page__item list-page__item--leaf"><div class="item-namber">1</div>Функциональное питание содержит только полезные питательные вещества.</li>
+            <li class="list-page__item list-page__item--powder"><div class="item-namber">2</div>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="list-page__item list-page__item--dining"><div class="item-namber">3</div>Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="list-page__item list-page__item--clock"><div class="item-namber">4</div>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
         </div>
       </section>
@@ -129,14 +129,10 @@
               <img class="slider__img" src="../img/before-mobile@1x.png" srcset="../img/before-mobile@2x.png 2x" width="320" height="240" alt="Изоражение кота Бориса До">
             </picture>
             <div class="slider__button-wrapper">
-              <p class="slider__button">Было</p>
-              <div class="slider__button2"><div class="slider__button-radio"></div></div>
-              <p class="slider__button">Стало</p>
+              <p class="slider__button-p">Было</p>
+              <div class="slider__button"><div class="slider__button-radio"></div></div>
+              <p class="slider__button-p">Стало</p>
             </div>
-            <!-- <ul class="slider__list">
-              <li><label class="slider__button button-after"><input type="radio" name="slider-radio"  value="befor" class="visually-hidden" checked><span class="slider-radio"></span>Было</label></li>
-              <li><label class="slider__button button-befor"><input type="radio" name="slider-radio" value="after" class="visually-hidden"><span class="slider-radio"></span>Стало</label></li>
-            </ul> -->
           </div>
           <div class="slider__after">
             <picture>
@@ -144,8 +140,11 @@
               <source media="(min-width: 768px)" srcset="../img/after-tablet@1x.png 1x, ../img/after-tablet@2x.png 2x">
               <img class="slider__img" src="../img/after-mobile@1x.png" srcset="../img/after-mobile@2x.png 2x" width="320" height="240" alt="Изоражение кота Бориса До">
             </picture>
-            <button type="button">Назад</button>
-            <p>После</p>
+            <div class="slider__button-wrapper">
+              <p class="slider__button-p">Было</p>
+              <div class="slider__button"><div class="slider__button-radio"></div></div>
+              <p class="slider__button-p">Стало</p>
+            </div>
           </div>
         </div>
       </div>
@@ -157,7 +156,7 @@
            <div class="map__text"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></div>
         </div>
         <div class="map__block2">
-        <iframe class="interactiv-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
+        <iframe class="map__interactiv" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
                 width="320" height="362" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
@@ -182,7 +181,7 @@
         </li>
         <li><div class="page-footer__copyright copyright">
           <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <p class="copyright_text">HTML Academy</p>
+          <p class="copyright__text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
             36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7
